2003-01-10  Jens Petersen  <petersen@haskell.org>

	* demo/unicode/Arabic.hs (main): use ResponseYes, ResponseCancel
	and ResponseOk

	* gtk/windows/Dialog.chs: import and re-export ResponseId instead
	of responseName's.  import fromResponse and toResponse.
	(dialogRun): use toResponse
	(dialogResponse): use fromResponse
	(dialogAddButton): use fromResponse
	(dialogAddActionWidget): use fromResponse
	(dialogSetDefaultResponse): fromResponse
	(dialogSetResponseSensitive): fromResponse
	(onResponse, afterResponse): toResponse

	* gtk/general/Structs.hsc: export fromResponse and toResponse,
	instead of all the responseName's.  ResponseId is now a datatype.
	fromResponse converts from a ResponseId to the corresponding gtk
	constant values.  toResponse does the reverse map.  ResponseUser
	Int carries positive integer user defined responses.  fromResponse
	and toResponse are only defined for positive integers.

2002-12-19 Axel Simon <A.Simon@ukc.ac.uk>

	* VERSION, INSTALL: bump version, tweak instructions

	* doc/Makefile: create the subdirectories before copying

	* Makefile: make all also builds documentation, use proper names
	for the reference pages

	* gendoc/XMLwrite.hs: insert the name of the current node into
	each reference page.

	* gtk/menuComboToolbar/MenuBar.chs, gtk/abstract/Paned.chs: Docu
	fix, gave the widgets propper names.
	
2002-12-16 Axel Simon <A.Simon@ukc.ac.uk>

	* gendoc/PrettyLib.hs: convert from PackedString to normal String

	* gendoc/Update.hs, gendoc/XMLwrite.hs: add hyperlinks between
	from synopsis and tried to link arguments to types.
	
	* doc/Makefile doc/gtk2hs.xml doc/mogul.xml: Added documentation.

	* gtk/treeList/TreeModel.chs: Added two functions and export the
	function gtk_tree_model_get_iter_from_string for
	CellRendererText.chs

	* gtk/treeList/CellRendererText.chs: use the bare function from
	TreeModel.chs to avoid converting the C string to Haskell and
	back.
	